refactor: java21의 getFirst() 사용